# memphis

./: Cargo.toml  README.md  test_features.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
crosscheck/: Cargo.toml
crosscheck/src/: lib.rs
docs/: DEVELOPING.md  SUPPORTED.md
examples/: api.py  builtins.py  context_manager.py  descriptor_protocol.py  exceptions.py  listen.py  loop_perf.py  meta.py  new_method.py  other.py  repl.py  test.py  test_vm.py
examples/async/: a.py  b.py  c.py  d.py  manual_test.py  simple.py  tasks.py
examples/todo/: file.py  loop.py  member_access.py  monkey_patching.py  threads.py
src/: context.rs  engine.rs  errors.rs  lib.rs  main.rs  memphis.rs
src/analysis/: function_analysis.rs  mod.rs  visitor.rs  yield_detector.rs
src/bytecode_vm/: context.rs  indices.rs  interpreter.rs  mod.rs  opcode.rs  raised_error.rs  result.rs  types.rs  utils.rs  value.rs
src/core/: container.rs  log.rs  mod.rs  stack.rs  utils.rs
src/crosscheck/: adapters.rs  crosscheck_assignment.rs  crosscheck_closures.rs  crosscheck_control_flow.rs  crosscheck_expressions.rs  crosscheck_function_call.rs  crosscheck_generators.rs  crosscheck_import.rs  crosscheck_method_call.rs  macros.rs  mod.rs  session.rs  test_value.rs  traits.rs
src/crosscheck_utils/: adapters.rs  mod.rs  traits.rs
src/domain/: call_stack.rs  context.rs  dunder.rs  encoding.rs  error.rs  function.rs  identifier.rs  import_path.rs  mod.rs  module_name.rs  resolver.rs  result.rs  source.rs  stack_frame.rs  type_enum.rs  value.rs
src/init/: builder.rs  context.rs  memphis.rs  mod.rs  repl.rs  terminal_io.rs
src/lexer/: lexer.rs  mod.rs  multiline.rs  token.rs  types.rs
src/llvm_backend/: mod.rs
src/parser/: mod.rs  parser.rs  static_analysis.rs  test_utils.rs  token_buffer.rs  types.rs
src/repl/: context.rs  mod.rs  repl.rs  terminal_io.rs
src/runtime/: imports.rs  mod.rs  state.rs  stdlib.rs
src/treewalk/: boxing.rs  builtins.rs  mod.rs  (+24 more)
tests/: checks.rs  crosscheck_assignment.rs  crosscheck_control_flow.rs  crosscheck_expressions.rs  crosscheck_function_call.rs  crosscheck_method_call.rs  integration.rs  other_backends.rs  repl.rs
wasm_ui/: index.html
(+178 files in other folders)
